{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 63,
  "lineage": "d41e75a0-56a1-39cf-fe1d-b9c24819c463",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_natgw_kong1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-032e12661a4a5a461",
            "domain": "vpc",
            "id": "eipalloc-02c3e2437bb6d4e2d",
            "network_border_group": "us-west-2",
            "network_interface": "eni-040bfddbb427b58d8",
            "private_dns": "ip-10-10-0-80.us-west-2.compute.internal",
            "private_ip": "10.10.0.80",
            "public_dns": "ec2-35-81-48-160.us-west-2.compute.amazonaws.com",
            "public_ip": "35.81.48.160",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip_natgw_kong1"
            },
            "tags_all": {
              "Name": "eip_natgw_kong1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw_lbaas_kong",
            "aws_vpc.kong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_natgw_kong2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-097cf877b0192f4ff",
            "domain": "vpc",
            "id": "eipalloc-01e5172d56d66410e",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0d69c5d4c348f7bdc",
            "private_dns": "ip-10-10-0-116.us-west-2.compute.internal",
            "private_ip": "10.10.0.116",
            "public_dns": "ec2-35-82-137-132.us-west-2.compute.amazonaws.com",
            "public_ip": "35.82.137.132",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip_natgw_kong2"
            },
            "tags_all": {
              "Name": "eip_natgw_kong2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw_lbaas_kong",
            "aws_vpc.kong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kong_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cf6f5c8a62fa5da6",
            "arn": "arn:aws:ec2:us-west-2:311028179126:instance/i-061d19533de1f120b",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-061d19533de1f120b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kong-key-pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0caf9e53afbb54865",
            "private_dns": "ip-10-10-0-87.us-west-2.compute.internal",
            "private_ip": "10.10.0.87",
            "public_dns": "ec2-34-219-254-57.us-west-2.compute.amazonaws.com",
            "public_ip": "34.219.254.57",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0af63462d5f6911dc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-085c6806e99668c68"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-049fbf0e0eb579ad0",
            "tags": {
              "Name": "kong_bastion"
            },
            "tags_all": {
              "Name": "kong_bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-085c6806e99668c68"
            ]
          },
          "dependencies": [
            "aws_db_instance.kong_bd",
            "aws_security_group.sg_kong_bastion",
            "aws_subnet.subnet_lbaas_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kong_vm_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cf6f5c8a62fa5da6",
            "arn": "arn:aws:ec2:us-west-2:311028179126:instance/i-09814a204d20f1cea",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09814a204d20f1cea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kong-key-pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-048c2634c2ab5ca88",
            "private_dns": "ip-10-10-0-16.us-west-2.compute.internal",
            "private_ip": "10.10.0.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0443ef3d449a2b172",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-049fe061fc796e4d0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0945451d06461cbe8",
            "tags": {
              "Name": "kong_vm_1"
            },
            "tags_all": {
              "Name": "kong_vm_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-049fe061fc796e4d0"
            ]
          },
          "dependencies": [
            "aws_db_instance.kong_bd",
            "aws_db_subnet_group.kong_bd_subnet_group",
            "aws_security_group.sg_kong",
            "aws_security_group.sg_kong_bd",
            "aws_subnet.subnet_kong_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kong_vm_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cf6f5c8a62fa5da6",
            "arn": "arn:aws:ec2:us-west-2:311028179126:instance/i-05a345b772c3e1d6d",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05a345b772c3e1d6d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kong-key-pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0faa47d2ff0682317",
            "private_dns": "ip-10-10-0-46.us-west-2.compute.internal",
            "private_ip": "10.10.0.46",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00727defd50ebbb94",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-049fe061fc796e4d0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a60a9446d65adb0b",
            "tags": {
              "Name": "kong_vm_2"
            },
            "tags_all": {
              "Name": "kong_vm_2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-049fe061fc796e4d0"
            ]
          },
          "dependencies": [
            "aws_db_instance.kong_bd",
            "aws_db_subnet_group.kong_bd_subnet_group",
            "aws_security_group.sg_kong",
            "aws_security_group.sg_kong_bd",
            "aws_subnet.subnet_kong_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_lbaas_kong",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:311028179126:internet-gateway/igw-042a2330dc20f02c3",
            "id": "igw-042a2330dc20f02c3",
            "owner_id": "311028179126",
            "tags": {
              "Name": "igw_lbaas_kong"
            },
            "tags_all": {
              "Name": "igw_lbaas_kong"
            },
            "vpc_id": "vpc-03a4b210006330139"
          },
          "dependencies": [
            "aws_vpc.kong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "external_lbaas_kong",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:311028179126:loadbalancer/app/externalLbaasKong/f90b0e37bb5bf95d",
            "arn_suffix": "app/externalLbaasKong/f90b0e37bb5bf95d",
            "dns_name": "externalLbaasKong-1377181488.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:311028179126:loadbalancer/app/externalLbaasKong/f90b0e37bb5bf95d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "externalLbaasKong",
            "security_groups": [
              "sg-0db345f985a487dfa"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02c18b10be7b9553a"
              },
              {
                "subnet_id": "subnet-049fbf0e0eb579ad0"
              }
            ],
            "subnets": [
              "subnet-02c18b10be7b9553a",
              "subnet-049fbf0e0eb579ad0"
            ],
            "vpc_id": "vpc-03a4b210006330139",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.sg_lbaas_kong",
            "aws_subnet.subnet_lbaas_1",
            "aws_subnet.subnet_lbaas_2",
            "aws_vpc.kong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "external-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:311028179126:listener/app/externalLbaasKong/f90b0e37bb5bf95d/da08aee6a7f4e25e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:311028179126:targetgroup/kongtargetgroup/27458f0b62f497ef",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:311028179126:listener/app/externalLbaasKong/f90b0e37bb5bf95d/da08aee6a7f4e25e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:311028179126:loadbalancer/app/externalLbaasKong/f90b0e37bb5bf95d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_target_group.kong_tg",
            "aws_security_group.sg_lbaas_kong",
            "aws_subnet.subnet_lbaas_1",
            "aws_subnet.subnet_lbaas_2",
            "aws_vpc.kong_vpc",
            "aws_lb.external_lbaas_kong"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "kong_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:311028179126:targetgroup/kongtargetgroup/27458f0b62f497ef",
            "arn_suffix": "targetgroup/kongtargetgroup/27458f0b62f497ef",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 5,
                "matcher": "200",
                "path": "/status",
                "port": "8001",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:311028179126:targetgroup/kongtargetgroup/27458f0b62f497ef",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "kongtargetgroup",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03a4b210006330139"
          },
          "dependencies": [
            "aws_vpc.kong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tgr_attachment_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:311028179126:targetgroup/kongtargetgroup/27458f0b62f497ef-20210506024447299600000002",
            "port": 8000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:311028179126:targetgroup/kongtargetgroup/27458f0b62f497ef",
            "target_id": "i-09814a204d20f1cea"
          },
          "dependencies": [
            "aws_db_instance.kong_bd",
            "aws_db_subnet_group.kong_bd_subnet_group",
            "aws_instance.kong_vm_1",
            "aws_lb_target_group.kong_tg",
            "aws_security_group.sg_kong",
            "aws_security_group.sg_kong_bd",
            "aws_subnet.subnet_kong_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tgr_attachment_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:311028179126:targetgroup/kongtargetgroup/27458f0b62f497ef-20210506024440534700000001",
            "port": 8000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:311028179126:targetgroup/kongtargetgroup/27458f0b62f497ef",
            "target_id": "i-05a345b772c3e1d6d"
          },
          "dependencies": [
            "aws_db_instance.kong_bd",
            "aws_db_subnet_group.kong_bd_subnet_group",
            "aws_instance.kong_vm_2",
            "aws_lb_target_group.kong_tg",
            "aws_security_group.sg_kong",
            "aws_security_group.sg_kong_bd",
            "aws_subnet.subnet_kong_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_kong1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02c3e2437bb6d4e2d",
            "id": "nat-09b20ee602a53a9b1",
            "network_interface_id": "eni-040bfddbb427b58d8",
            "private_ip": "10.10.0.80",
            "public_ip": "35.81.48.160",
            "subnet_id": "subnet-049fbf0e0eb579ad0",
            "tags": {
              "Name": "nat_gw_kong1"
            },
            "tags_all": {
              "Name": "nat_gw_kong1"
            }
          },
          "dependencies": [
            "aws_eip.eip_natgw_kong1",
            "aws_internet_gateway.igw_lbaas_kong",
            "aws_subnet.subnet_lbaas_1",
            "aws_vpc.kong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_kong2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01e5172d56d66410e",
            "id": "nat-00db3e30acafe3b4d",
            "network_interface_id": "eni-0d69c5d4c348f7bdc",
            "private_ip": "10.10.0.116",
            "public_ip": "35.82.137.132",
            "subnet_id": "subnet-02c18b10be7b9553a",
            "tags": {
              "Name": "nat_gw_kong2"
            },
            "tags_all": {
              "Name": "nat_gw_kong2"
            }
          },
          "dependencies": [
            "aws_eip.eip_natgw_kong2",
            "aws_internet_gateway.igw_lbaas_kong",
            "aws_subnet.subnet_lbaas_2",
            "aws_vpc.kong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_kong1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:311028179126:route-table/rtb-0000677a053d50ef9",
            "id": "rtb-0000677a053d50ef9",
            "owner_id": "311028179126",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09b20ee602a53a9b1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_kong1"
            },
            "tags_all": {
              "Name": "rt_kong1"
            },
            "vpc_id": "vpc-03a4b210006330139"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_lbaas_kong",
            "aws_nat_gateway.nat_gw_kong1",
            "aws_subnet.subnet_lbaas_1",
            "aws_vpc.kong_vpc",
            "aws_eip.eip_natgw_kong1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_kong2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:311028179126:route-table/rtb-0a14033d8f51184d8",
            "id": "rtb-0a14033d8f51184d8",
            "owner_id": "311028179126",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00db3e30acafe3b4d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_kong2"
            },
            "tags_all": {
              "Name": "rt_kong2"
            },
            "vpc_id": "vpc-03a4b210006330139"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kong_vpc",
            "aws_eip.eip_natgw_kong2",
            "aws_internet_gateway.igw_lbaas_kong",
            "aws_nat_gateway.nat_gw_kong2",
            "aws_subnet.subnet_lbaas_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_lbaas_kong",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:311028179126:route-table/rtb-04a88284630b09e9c",
            "id": "rtb-04a88284630b09e9c",
            "owner_id": "311028179126",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-042a2330dc20f02c3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_lbaas_kong"
            },
            "tags_all": {
              "Name": "rt_lbaas_kong"
            },
            "vpc_id": "vpc-03a4b210006330139"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_lbaas_kong",
            "aws_vpc.kong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_subnets_kong1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c394396cb36c606b",
            "route_table_id": "rtb-0000677a053d50ef9",
            "subnet_id": "subnet-0945451d06461cbe8"
          },
          "dependencies": [
            "aws_internet_gateway.igw_lbaas_kong",
            "aws_nat_gateway.nat_gw_kong1",
            "aws_route_table.rt_kong1",
            "aws_subnet.subnet_kong_1",
            "aws_subnet.subnet_lbaas_1",
            "aws_vpc.kong_vpc",
            "aws_eip.eip_natgw_kong1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_subnets_kong2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0984426aa27376db9",
            "route_table_id": "rtb-0a14033d8f51184d8",
            "subnet_id": "subnet-0a60a9446d65adb0b"
          },
          "dependencies": [
            "aws_subnet.subnet_lbaas_2",
            "aws_vpc.kong_vpc",
            "aws_eip.eip_natgw_kong2",
            "aws_internet_gateway.igw_lbaas_kong",
            "aws_nat_gateway.nat_gw_kong2",
            "aws_route_table.rt_kong2",
            "aws_subnet.subnet_kong_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_subnets_lbass1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5ca919c37e65455",
            "route_table_id": "rtb-04a88284630b09e9c",
            "subnet_id": "subnet-049fbf0e0eb579ad0"
          },
          "dependencies": [
            "aws_route_table.rt_lbaas_kong",
            "aws_subnet.subnet_lbaas_1",
            "aws_vpc.kong_vpc",
            "aws_internet_gateway.igw_lbaas_kong"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_subnets_lbass2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003bc75afe7f4e647",
            "route_table_id": "rtb-04a88284630b09e9c",
            "subnet_id": "subnet-02c18b10be7b9553a"
          },
          "dependencies": [
            "aws_internet_gateway.igw_lbaas_kong",
            "aws_route_table.rt_lbaas_kong",
            "aws_subnet.subnet_lbaas_2",
            "aws_vpc.kong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_kong",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:311028179126:security-group/sg-049fe061fc796e4d0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-049fe061fc796e4d0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8001
              }
            ],
            "name": "sg_kong_allow-all-sg",
            "name_prefix": "",
            "owner_id": "311028179126",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_kong"
            },
            "tags_all": {
              "Name": "sg_kong"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a4b210006330139"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_kong_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:311028179126:security-group/sg-085c6806e99668c68",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-085c6806e99668c68",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_kong_bastion",
            "name_prefix": "",
            "owner_id": "311028179126",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_kong_bastion"
            },
            "tags_all": {
              "Name": "sg_kong_bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a4b210006330139"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_kong_bd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:311028179126:security-group/sg-0400cff2a25a6c534",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0400cff2a25a6c534",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "sg_kong_bd",
            "name_prefix": "",
            "owner_id": "311028179126",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_kong_bd"
            },
            "tags_all": {
              "Name": "sg_kong_bd"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a4b210006330139"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_lbaas_kong",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:311028179126:security-group/sg-0db345f985a487dfa",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db345f985a487dfa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_lbaas_kong",
            "name_prefix": "",
            "owner_id": "311028179126",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_lbaas_kong"
            },
            "tags_all": {
              "Name": "sg_lbaas_kong"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a4b210006330139"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_kong_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:311028179126:subnet/subnet-0945451d06461cbe8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.0.0/27",
            "id": "subnet-0945451d06461cbe8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311028179126",
            "tags": {
              "Name": "subnet_kong_1"
            },
            "tags_all": {
              "Name": "subnet_kong_1"
            },
            "vpc_id": "vpc-03a4b210006330139"
          },
          "dependencies": [
            "aws_vpc.kong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_kong_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:311028179126:subnet/subnet-0a60a9446d65adb0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.10.0.32/27",
            "id": "subnet-0a60a9446d65adb0b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311028179126",
            "tags": {
              "Name": "subnet_kong_2"
            },
            "tags_all": {
              "Name": "subnet_kong_2"
            },
            "vpc_id": "vpc-03a4b210006330139"
          },
          "dependencies": [
            "aws_vpc.kong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_lbaas_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:311028179126:subnet/subnet-049fbf0e0eb579ad0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.0.64/27",
            "id": "subnet-049fbf0e0eb579ad0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311028179126",
            "tags": {
              "Name": "subnet_lbaas_1"
            },
            "tags_all": {
              "Name": "subnet_lbaas_1"
            },
            "vpc_id": "vpc-03a4b210006330139"
          },
          "dependencies": [
            "aws_vpc.kong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_lbaas_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:311028179126:subnet/subnet-02c18b10be7b9553a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.10.0.96/27",
            "id": "subnet-02c18b10be7b9553a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311028179126",
            "tags": {
              "Name": "subnet_lbaas_2"
            },
            "tags_all": {
              "Name": "subnet_lbaas_2"
            },
            "vpc_id": "vpc-03a4b210006330139"
          },
          "dependencies": [
            "aws_vpc.kong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kong_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:311028179126:vpc/vpc-03a4b210006330139",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/25",
            "default_network_acl_id": "acl-0e3dc144d3c25d82d",
            "default_route_table_id": "rtb-0fa1945ee2085428d",
            "default_security_group_id": "sg-0df3ff68375df9a90",
            "dhcp_options_id": "dopt-8fa6dbf7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03a4b210006330139",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fa1945ee2085428d",
            "owner_id": "311028179126",
            "tags": {
              "Name": "kong_vpc"
            },
            "tags_all": {
              "Name": "kong_vpc"
            }
          }
        }
      ]
    }
  ]
}